fixed container on mobile viewport

--- a/src/css/flexboxgrid.css
+++ b/src/css/flexboxgrid.css
@@ -249,6 +249,7 @@
 @media only screen and (max-width: 48rem) {
 	.container {
 		max-width: 45rem;
+		width:auto;
 	}
 }
 
